Don't overspill FT icon; notify number no longer red

--- a/src/scss/_logo.scss
+++ b/src/scss/_logo.scss
@@ -1,4 +1,4 @@
-$o-header-logo-size: 43px;
+$o-header-logo-size: 38px;
 
 .o-header__logo {
 	margin-right: 20px;
